# centreoncdiff

./: Makefile  Readme.md  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
centreoncdiff/: __main__.py  parser.py
centreoncdiff/centreon/: Aclaction.py  Aclgroup.py
examples/: aclaction.yml  aclgroup.yml  aclmenu.yml
tests/: test_unit_centreon_aclaction_01_functions.py  test_unit_centreon_aclaction_02_construct.py  test_unit_centreon_aclaction_03_parsing.py  test_unit_centreon_aclaction_04_generate.py  test_unit_centreon_aclaction_05_generate_diff.py  test_unit_centreon_aclgroup_01_functions.py  test_unit_centreon_aclgroup_02_construct.py  test_unit_centreon_aclgroup_03_parsing.py  test_unit_centreon_aclgroup_04_generate.py  test_unit_centreon_aclgroup_05_generate_diff.py  test_unit_centreon_aclmenu_01_functions.py  test_unit_centreon_aclmenu_02_construct.py  test_unit_centreon_aclmenu_03_parsing.py  test_unit_centreon_aclmenu_04_generate.py  test_unit_centreon_aclmenu_05_generate_diff.py  test_unit_centreon_exportparser.py
tests/data/: export_aclaction.txt  export_aclgroup.txt  export_aclmenu.txt  export_complete_export.txt
